2006-08-15  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/gedit-file-bookmarks-store.[ch]: fixed
	bug 350553 – Filebrowser plugin: Double separators if remote loc. 
	list is empty

=== gedit 2.15.7 ===

2006-08-07  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.15.7 released.

2006-08-11  Paolo Borelli  <pborelli@katamail.com>

	* gedit-prefs-manager-app.[ch]:
	* gedit-window.c
	* gedit-app.c:

	small cleanup in setting/getting the window size.

2006-08-11  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document-saver.c: preserve xattrs, patch by James
	Antill. Bug #350805.

2006-08-09  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-message-area.c:
	* gedit/gedit-notebook.c:
	* gedit/gedit-panel.c:
	* gedit/gedit-statusbar.c:
	* gedit/gedit-view.c:

	use g_object_ref_sink, patch by John Luke.

2006-08-09  Paolo Borelli  <pborelli@katamail.com>

	* plugins/spell/gedit-spell-plugin.c: fix autospell state when
	switching tab.

2006-08-08  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-window.c: fix a crash in recents file code.

=== gedit 2.15.6 ===

2006-08-07  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.15.6 released.

2006-08-07  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document.[ch]:
	* gedit/gedit-window.c:

	use the has-selection property of GtkTextBuffer 2.10.

2006-08-07  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-view.c: use the indent-on-tab feature of sourceview 1.7.2

2006-08-07  Paolo Borelli  <pborelli@katamail.com>

	* gedit/recent-files/*:	throw away the eggs, they were past due.

	* gedit/gedit-window.[ch]:
	* gedit/gedit-tab.c:
	* gedit/gedit.c:

	New recent-files implementation using GtkRecent.

2006-08-05  Jesse van den Kieboom  <jesse@icecrew.nl>
	
	* gedit/gedit-commands-file.c: changed opening of multiple files
	behavior (bug 143646), patch by Paolo Maggi